# agentic-slack-bot

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
src/receiver/: app.py
src/worker/: agent.py  system_prompt.md  tasks.py
src/worker/skills/: 01_core.md  02_filters.md  03_metadata.md  04_jobs.md  05_lineage.md  06_billing.md  07_access.md  08_formatting.md
